* Moved blog * Removed LICENCE

--- a/_config.yml
+++ b/_config.yml
@@ -148,6 +148,8 @@ highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
 
+paginate_path: "/blog/page:num/"
+
 kramdown:
   input: GFM
 
@@ -237,6 +239,8 @@ prose:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+
+
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
