* Tidy up language * Change Webpage title

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: kisa.com
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: KISA
 
 # --- Navigation bar options --- #
 
